backend/test_output5.txt
  File "<string>", line 1
    from document_processor import process_document; import tempfile; import os; with tempfile.NamedTemporaryFile(mode='w', suffix='.txt', delete=False) as f: f.write('This is a data processing agreement between parties. The parties hereby agree to process personal data in compliance with GDPR.'); temp_path = f.name; result = process_document(temp_path, 'txt'); os.unlink(temp_path); print('Result:', result)
                                                                                 ^^^^
SyntaxError: invalid syntax
